# FastNoiseSIMD

./: .travis.yml  CMakeLists.txt  README.md
FastNoiseSIMD/: FastNoiseSIMD.h
HastyNoise/: hastyNoise.cpp  hastyNoise.h  hastyNoise_enums.cpp  hastyNoise_enums.h  hastyNoise_internal.inl  internal_avx2.inl  internal_avx512.inl  internal_neon.inl
testApp/: main.cpp
